xmodule/static/css-builtin-blocks/VideoBlockDisplay.css
/* ... */
.xmodule_display.xmodule_VideoBlock .video .downloads-heading {
    margin: 1em 0 0;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section {
    display: flex;
    justify-content: space-between;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-download-video,
.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-download-transcripts,
.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-handouts,
.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .branding,
.xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-transcript-feedback {
    flex: 1;
    margin-top: var(--baseline, 20px);
    padding-right: var(--baseline, 20px);
    vertical-align: top;
}

@media (min-width: 768px) {
    .xmodule_display.xmodule_VideoBlock .video .wrapper-downloads {
        display: flex;
    }
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .hd {
    margin: 0;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .wrapper-download-video .video-sources {
    margin: 0;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .wrapper-download-transcripts .list-download-transcripts {
    margin: 0;
    padding: 0;
    list-style: none;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .wrapper-download-transcripts .list-download-transcripts .transcript-option {
    margin: 0;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .wrapper-download-transcripts .list-download-transcripts .transcript-option a.btn,
.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .wrapper-download-transcripts .list-download-transcripts .transcript-option a.btn-link {
    font-size: 16px !important;
    font-weight: unset;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .branding {
    padding-right: 0;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .branding .host-tag {
    position: absolute;
    left: -9999em;
    display: inline-block;
    vertical-align: middle;
    color: var(--body-color, #313131);
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .branding .brand-logo {
    display: inline-block;
    max-width: 100%;
    max-height: calc((var(--baseline, 20px) * 2));
    padding: calc((var(--baseline, 20px) / 4)) 0;
    vertical-align: middle;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-transcript-feedback {
    display: none;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-transcript-feedback .transcript-feedback-buttons {
    display: flex;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-transcript-feedback .transcript-feedback-btn-wrapper {
    margin-right: 10px;
}

.xmodule_display.xmodule_VideoBlock .video .wrapper-transcript-feedback .thumbs-up-btn,
.xmodule_display.xmodule_VideoBlock .video .wrapper-transcript-feedback .thumbs-down-btn {
    border: none;
    box-shadow: none;
    background: transparent;
}

.xmodule_display.xmodule_VideoBlock .video .google-disclaimer {
    display: none;
    margin-top: var(--baseline, 20px);
    padding-right: var(--baseline, 20px);
    vertical-align: top;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper {
    float: left;
    margin-right: 2.27273%;
    width: 65.90909%;
    background-color: black;
    position: relative;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper:hover .btn-play {
    color: #0075b4;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper:hover .btn-play::after {
    background: #fff;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-player-pre,
.xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-player-post {
    height: 50px;
    background-color: #111010;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .spinner {
    transform: translate(-50%, -50%);
    position: absolute;
    z-index: 1;
    background: rgba(0, 0, 0, 0.7);
    top: 50%;
    left: 50%;
    padding: 30px;
    border-radius: 25%;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .spinner::after {
    animation: rotateCW 3s infinite linear;
    content: '';
    display: block;
    width: 30px;
    height: 30px;
    border: 7px solid white;
    border-top-color: transparent;
    border-radius: 100%;
    position: relative;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .btn-play {
    transform: translate(-50%, -50%);
    position: absolute;
    z-index: 1;
    top: 46%;
    left: 50%;
    font-size: 4em;
    cursor: pointer;
    opacity: 0.1;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .btn-play::after {
    background: var(--white, #fff);
    position: absolute;
    width: 50%;
    height: 50%;
    content: '';
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    z-index: -1;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions {
    left: 5%;
    position: absolute;
    width: 90%;
    box-sizing: border-box;
    top: 70%;
    text-align: center;
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible {
    max-height: calc((var(--baseline, 20px) * 3));
    border-radius: calc((var(--baseline, 20px) / 5));
    padding: 8px calc((var(--baseline, 20px) / 2)) 8px calc((var(--baseline, 20px) * 1.5));
    background: rgba(0, 0, 0, 0.75);
    color: var(--yellow, #e2c01f);
}

.xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible::before {
    position: absolute;
    display: inline-block;
    top: 50%;
    left: var(--baseline, 20px);
    margin-top: -0.6em;
    font-family: 'FontAwesome';
    content: "\f142";
    color: var(--white, #fff);
    opacity: 0.5;
}
/* ... */

